# AGENT_OS

./: .gitignore  README.md  Vision.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mobileai/core/decomposer/: QueryDecomposerTest.kt
app/src/androidTest/java/com/mobileai/core/llm/: InferenceEngineTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: semantic_parser_system_prompt.v1.txt  structured_action_plan.v1.gbnf
app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp  logging.h
app/src/main/java/com/mobileai/core/: MainActivity.kt
app/src/main/java/com/mobileai/core/data/: AppDatabase.kt  Daos.kt  EmbeddingStore.kt  Entities.kt
app/src/main/java/com/mobileai/core/decomposer/: QueryDecomposer.kt
app/src/main/java/com/mobileai/core/llm/: InferenceEngine.kt  InferenceEngineImpl.kt
app/src/main/java/com/mobileai/core/plan/: PlanValidator.kt  StructuredActionPlan.kt
app/src/test/java/com/mobileai/core/plan/: PlanValidatorTest.kt
docs/: query_decomposer_design.md  structured_action_plan.schema.json  verification_findings.md
research/eval-harness/: cases.json  run_eval.py
research/llama-verify/: system_prompt_v1.txt  system_prompt_v2.txt
research/sqlite-vec-verify/: test_combined_query.py
